Add navigation; route guards; UX adjustment

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,6 @@ $meta-max-width: 500px;
 $meta-width: 30%;
 $footer-height: 120px;
 $footer-translate-distance: 90px;
+
+// time
+$layout-transition-time: 0.8s;
